@@ -2,7 +2,7 @@
 #ifndef __mixr_base_MonitorMetrics_H__
 #define __mixr_base_MonitorMetrics_H__
 
-#include "mixr/base/Color.hpp"
+#include "mixr/base/colors/Color.hpp"
 #include "mixr/base/osg/Matrixd"
 #include "mixr/base/safe_ptr.hpp"
 #include "mixr/base/osg/Vec3d"
