@@ -8,7 +8,7 @@
 #include "mixr/base/numbers/Number.hpp"
 
 #include "mixr/base/List.hpp"
-#include "mixr/base/Rgb.hpp"
+#include "mixr/base/colors/Rgb.hpp"
 #include "mixr/base/Pair.hpp"
 #include "mixr/base/PairStream.hpp"
 
