@@ -3,7 +3,8 @@
 
 #include "mixr/base/numbers/Number.hpp"
 
-#include "mixr/base/Color.hpp"
+#include "mixr/base/colors/Color.hpp"
+
 #include "mixr/base/String.hpp"
 #include "mixr/base/Pair.hpp"
 #include "mixr/base/PairStream.hpp"
